# meshtastic-flasher

./: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: lint.yml  release.yml  testing.yml
src/: App.tsx  helpers.ts  main.tsx  persistence.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  boards.rs  commands.rs  flasher.rs  fs.rs  main.rs  state.rs
src/components/: BoardOption.tsx  ProgressBar.tsx  Titlebar.tsx  WelcomeScreenDialog.tsx  WindowMenu.tsx
src/components/generic/: DefaultTooltip.tsx
src/components/hoverInfoCards/: ESP32S3HoverCard.tsx  HoverInfoCardSwitcher.tsx  NRF52840HoverCard.tsx  RP2040HoverCard.tsx
src/state/: actions.ts  reducer.ts
src/types/: backend.ts  types.ts
