[package]
name = "meshtastic-desktop-flasher"
version = "0.2.1"
description = "A desktop application for flashing Meshtaic devices"
authors = ["Adam McQuilkin"]
license = "GPL-3.0"
repository = "https://github.com/ajmcquilkin/meshtastic-flasher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
espflash = { version = "2.0.1", default-features = false }
tokio = "1.32.0"
reqwest = { version = "0.11.20", features = ["json"] }
zip = "0.6.6"
serialport = { version = "4.2.2", features = ["serde"] }
regex = "1.9.5"
tauri-plugin-clipboard-manager = "2.0.0-alpha.2"
tauri-plugin-dialog = "2.0.0-alpha.2"
tauri-plugin-log = "2.0.0-alpha"
tauri-plugin-os = "2.0.0-alpha.2"
tauri-plugin-shell = "2.0.0-alpha.2"
tauri-plugin-store = "2.0.0-alpha.2"
tauri-plugin-window = "2.0.0-alpha.2"
log = "0.4.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
