[package]
name = "meshtastic-desktop-flasher"
version = "0.3.0"
description = "A desktop application for flashing Meshtaic devices"
authors = ["Adam McQuilkin"]
license = "GPL-3.0"
repository = "https://github.com/ajmcquilkin/meshtastic-flasher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "window-set-fullscreen", "dialog-all", "shell-open", "path-all", "http-all", "notification-all", "clipboard-write-text", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
espflash = { git = "https://github.com/ajmcquilkin/espflash.git", default-features = false, rev = "0b378cb7be00a9ed1b79bf54f0af7b26f7869ad3" }
tokio = "1.32.0"
reqwest = { version = "0.11.20", features = ["json"] }
zip = "0.6.6"
serialport = { version = "4.2.2", features = ["serde"] }
regex = "1.9.5"
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bytes = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
